tests/ifcc-test-output/testfiles-part4_3-affdecvarvar/gcc-compile.txt
input.c:1:1: error: unknown type name ‘wint’; did you mean ‘int’?
    1 | wint main() {
      | ^~~~
      | int

return code: 1
